@@ -233,6 +233,9 @@ Release 0.22.0 - Unreleased
 
     HDFS-1562. Add rack policy tests. (eli)
 
+    HDFS-1866. Document dfs.datanode.max.transfer.threads in hdfs-default.xml
+    (Harsh J Chouraria via todd)
+
   OPTIMIZATIONS
 
     HDFS-1140. Speedup INode.getPathComponents. (Dmytro Molkov via shv)
